# tdd

./: .gitignore  .gitpod.yml  .replit  README.md  TODO.md  cleanup.sh  replit.nix
cookiecutter-templates/python/: pyproject.toml
cookiecutter-templates/python/cookiecutter-kata-python/: cookiecutter.json
cookiecutter-templates/python/cookiecutter-kata-python/{{ cookiecutter.kata|lower }}/: pyproject.toml
cookiecutter/python-game/{{ cookiecutter.project_slug }}/: instructions.md  pyproject.toml  run.sh  run_tests.sh  run_watch.sh
cookiecutter/python-game/{{ cookiecutter.project_slug }}/src/: coordinates.py  game.py  game_event.py  pacman.py  sprite.py
cookiecutter/python-game/{{ cookiecutter.project_slug }}/test/: observer.py  test_game.py
cookiecutter/python/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml  run_tests.sh  run_watch.sh
cookiecutter/python/{{ cookiecutter.project_slug }}/test/: {{ cookiecutter.kata }}_spec.py  {{ cookiecutter.kata }}_test.py
kata-solutions/bugs-zero-kata/bugs-zero-python/: .coveragerc  game.py  game_runner.py  pyproject.toml  run_tests.sh  run_watch.sh
kata-solutions/bugs-zero-kata/bugs-zero-python/src/: game.py  game_runner.py
kata-solutions/bugs-zero-kata/bugs-zero-python/test/: TestGame.test_trivia_game.approved.txt  game_test.py
kata-solutions/cache-kata/cache-kata-python/: pyproject.toml
kata-solutions/cache-kata/cache-kata-python/src/: cache.py
kata-solutions/cache-kata/cache-kata-python/test/: cache_test.py
kata-solutions/christmas-tree/christmas-tree-python/: pyproject.toml  replit.sh  run_tests.sh  run_watch.sh
kata-solutions/christmas-tree/christmas-tree-python/src/: tree.py
kata-solutions/christmas-tree/christmas-tree-python/test/: tree_spec.py  tree_test.py
kata-solutions/connect-four/connect-four-python/: board_spec.py  game.py  player_spec.py  pyproject.toml  run.sh  run_tests.sh
kata-solutions/connect-four/connect-four-python/board/: array_board.py  bit_board.py  board.py
kata-solutions/connect-four/connect-four-python/player/: computer_player.py  connect_4_rating_player.py  min_max_player.py
kata-solutions/countries-kata/countries-kata-python/: pyproject.toml  run.sh
kata-solutions/countries-kata/countries-kata-python/src/: country.py  country_list.py  country_repository.py  ports_adapters.py
kata-solutions/countries-kata/countries-kata-python/test/: country_list_test.py
kata-solutions/db-adapter-pattern/db-adapter-python/: pyproject.toml  replit.sh
kata-solutions/db-adapter-pattern/db-adapter-python/src/: employee.py  endpoint.py  endpoint_spec.py  replit_db_repository.py  repository.py  stub_repository.py
kata-solutions/game-of-life/game-of-life-python/: game_of_life.py  pyproject.toml  run_tests.sh  run_watch.sh
kata-solutions/game-of-life/game-of-life-python/src/: game_of_life.py
kata-solutions/game-of-life/game-of-life-python/test/: game_of_life_spec.py
kata-solutions/manhattan-distance/manhattan-distance-python/: manhattan_spec.py  point.py  pyproject.toml  run_watch.sh
kata-solutions/mars-rover/mars-rover-python/: mars_rover_spec.py  pyproject.toml  run.sh
kata-solutions/pacman-kata/pacman-python/: pyproject.toml  run.sh  run_tests.sh  run_watch.sh
kata-solutions/pacman-kata/pacman-python/src/: circle.py  command.py  coordinates.py  direction.py  event_bus.py  game.py  game_engine.py  game_event.py  main.py  maze.py  node.py  node_group.py  pacman.py  pellet.py  pellet_group.py  position_on_vertex.py  pygame_clock.py  pygame_eventbus.py  pygame_game_engine.py  pygame_screen.py  screen.py  sprite.py  vertex.py
kata-solutions/pacman-kata/pacman-python/test/: fake_clock.py  fake_eventbus.py  fake_screen.py  observer.py  screen_observer.py  test_game.py  test_maze.py  test_nodes.py  test_pacman.py  test_render_pellets.py
kata-solutions/poker-hands-kata/poker-hands-python/: README.md  card.py  card_spec.py  hand_spec.py  pyproject.toml  run_tests.sh
kata-solutions/poker-hands-kata/poker-hands-python/spec/: card_spec.py  hand_spec.py  poker_hands_spec.py
kata-solutions/poker-hands-kata/poker-hands-python/src/: card.py  hand.py  illegal_args_exception.py  poker_hands.py  poker_ranks.py  suit.py
kata-solutions/questionnaire-kata/questionnaire-python/: pyproject.toml
kata-solutions/questionnaire-kata/questionnaire-python/src/: dashboard.py  data_processor.py  excel_data_reader.py  raw_data_reader.py  survey_data_reader.py
kata-solutions/report-generator-kata/report-generator-python/: pyproject.toml  run_tests.sh  run_watch.sh
kata-solutions/stack-kata/stack-kata-python/: pyproject.toml  run_tests.sh  stack.py  stack_spec.py  stack_test.py
kata-solutions/sudoku-kata/sudoku-python/: pyproject.toml  run_tests.sh  run_watch.sh
kata-solutions/task-list-kata/task-list-python/: .coveragerc  pyproject.toml  run_tests.sh
kata-solutions/tell-dont-ask/tell-dont-ask-python/: pyproject.toml  replit.sh  run.sh  run_tests.sh
kata-solutions/vending-machine/vending-machine-python/: pyproject.toml  run_tests.sh  run_watch.sh
kata-solutions/video-store-kata/video-store-python/: pyproject.toml  run_tests.sh  run_watch.sh
tdd-katas/dashboard-kata/dashboard_kata_python/: README.md  pyproject.toml  run.sh  run_tests.sh
tdd-katas/db-adapter-kata/db-adapter-python/: README.md  employee.py  endpoint.py  endpoint_test.py  instructions.md  main.py  pyproject.toml
tdd-katas/gilded-rose-kata/gilded-rose-python/: instructions-1.md  instructions-2.md  instructions-3.md  pyproject.toml
tdd-katas/report-generator-kata/report-generator-python/: pyproject.toml  run_tests.sh
tdd-katas/stack-kata/stack-kata-javascript/: README.md  SpecRunner.html  jasmine.css  package.json  pyproject.toml
tdd-katas/stack-kata/stack-kata-python/: README.md  instructions.md  pyproject.toml  replit.sh  stack.py  stack_spec.py  stack_test.py
tdd-katas/tell-dont-ask/tell-dont-ask-python/: README.md  instructions.md  pyproject.toml  requirements.txt  run_tests.sh
tdd-katas/tire-pressure-kata/tire-pressure-python/: alarm_test.py  instructions.md  pyproject.toml  run_tests.sh  run_watch.sh
(+888 files in other folders)
