[tool.poetry]
name = "python-cookiecutter-kata-template"
version = "0.1.0"
description = "Cookiecutter template for kata in Python"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
cookiecutter = "2.1.1"

[tool.poetry.dev-dependencies]
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"