[tool.poetry]
name = "{{ cookiecutter.kata }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pygame = "^2.5.2"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"
pyhamcrest = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
