[tool.poetry]
name = "{{ cookiecutter.kata }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author }}  <{{ cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
{% if cookiecutter.rspec_syntax == "n" %}
pytest-watch = "^4.2.0"
pytest = "^7.4.4"
pyhamcrest = "^2.0.4"
{% if cookiecutter.code_coverage == "y" %}pytest-cov = "^4.1.0"{% endif %}
{% endif %}
{% if cookiecutter.rspec_syntax == "y" %}
mamba = "^0.11.2"
expects = "^0.9.0"
{% if cookiecutter.code_coverage == "y" %}coverage = "^7.3.2"{% endif %}
{% endif %}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
