[tool.poetry]
name = "BugsZeroKata"
version = "0.1.0"
description = ""
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
approvaltests = "^9.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
