[tool.poetry]
name = "Trivia"
version = "0.1.0"
description = "The bugs zero kata"
authors = ["Zeger Hendrikse  <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"

pytest-watch = "^4.2.0"
pytest = "^7.4.4"
pyhamcrest = "^2.1.0"
pytest-cov = "^4.1.0"
approvaltests = "^10.2.0"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
