[tool.poetry]
name = "christmastree"
version = "0.1.0"
description = ""
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^6.1.2"
mamba = "^0.11.2"
expects = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
