[tool.poetry]
name = "christmastree"
version = "0.1.0"
description = ""
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.13"
pytest-watch = "^4.2.0"
coverage = "^7.11.0"
pyhamcrest = "^2.1.0"
pytest = "^8.4.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
