[tool.poetry]
name = "country_list"
version = "0.1.0"
description = "Solution for the countries kata"
authors = ["Zeger Hendrikse  <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
requests = "^2.32.2"
pyhamcrest = "^2.1.0"
pytest = "^8.2.1"
pytest-watch = "^4.2.0"





[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
