[tool.poetry]
name = "databaseadapterpattern"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mamba = "^0.11.2"
expects = "^0.9.0"
replit = "^3.2.4"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
