[tool.poetry]
name = "databaseadapterpattern"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
mamba = "^0.11.3"
expects = "^0.9.0"
fastapi = "^0.109.2"
fastapi-utils = "^0.2.1"
uvicorn = "^0.27.0.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
