[tool.poetry]
name = "Game of Life kata"
version = "0.1.0"
description = "Game of life"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
mamba = "^0.11.3"
expects = "^0.9.0"
coverage = "^7.3.2"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
