[tool.poetry]
name = "manhattandistancekata"
version = "0.1.0"
description = "Manhattan distance kata"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
mamba = "^0.11.2"
expects = "^0.9.0"
coverage = "^7.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
