[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "mars rover python"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
replit = "^3.2.4"
urllib3 = "^2.5.0"
mamba = "0.11.2"
expects = "0.9.0"

[tool.group.poetry.dev.dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
