[tool.poetry]
name = "PacMan kata Python"
version = "0.1.0"
description = "PacMan kata"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-watch = "^4.2.0"
pygame = "^2.6.1"
pyhamcrest = "^2.1.0"

[tool.group.poetry.dev.dependencies]

[tool.coverage.run]
branch = true
omit = [ "test/*" , "*/pygame_*.py", "*/__init__.py", "main.py"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
