[tool.poetry]
name = "pokerhandskata"
version = "0.1.0"
description = "Poker hands kata"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
mamba = "^0.11.2"
expects = "^0.9.0"
coverage = "^6.2.0"
mockito = "^1.2.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"