[tool.poetry]
name = "pokerhandskata"
version = "0.1.0"
description = "Poker hands kata"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
mamba = "^0.11.2"
expects = "^0.9.0"
pytest = "^7.4.2"
coverage = "^7.3.2"
mockito = "^1.4.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
