[tool.poetry]
name = "DataProcessor"
version = "0.1.0"
description = "This kata practices TDD"
authors = ["Your name  <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"

pyhamcrest = "^2.1.0"
pytest-watch = "^4.2.0"
plotly-express = "^0.4.1"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
streamlit = "^1.36.0"




[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
