[tool.poetry]
name = "ReportGeneration"
version = "0.1.0"
description = "Report generation kata"
authors = ["Zeger Hendrikse  <zegerh@yahoo.co.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
pytest = "^8.3.5"
pytest-watch = "^4.2.0"
pyhamcrest = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
