[tool.poetry]
name = "Stack kata Python"
version = "0.1.0"
description = "Stack kata"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mamba = "^0.11.2"
expects = "^0.9.0"

[tool.group.poetry.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
