[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = "This kata practices TDD"
authors = ["Your name  <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<=3.12"
pytest-watch = "^4.2.0"
pytest = "^7.3.2"
mamba = "^0.11.2"
py-expect = "^0.1.2"
expects = "^0.9.0"
coverage = "^7.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
