[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = "This kata practices TDD"
authors = ["Your name  <your@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
pytest-watch = "^4.2.0"
mamba = "^0.11.3"
py-expect = "^0.1.2"
expects = "^0.9.0"
coverage = "^7.4.1"
pytest = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
