[tool.poetry]
name = "task_list_python"
version = "0.1.0"
description = "This kata practices TDD"
authors = ["Zeger Hendrikse  <zegerh@yahoo.co.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pytest-watch = "^4.2.0"
pytest = "^7.3.2"
mamba = "^0.11.2"
py-expect = "^0.1.2"
expects = "^0.9.0"
coverage = "^7.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
