[tool.poetry]
name = "databaseadapterpattern"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mamba = "^0.11.3"
expects = "^0.9.0"
fastapi = "^0.115.2"
fastapi-utils = "^0.7.0"
uvicorn = "^0.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
