[tool.poetry]
name = "Gilded rose"
version = "0.1.0"
description = "Gilded rose kata"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
approvaltests = "^8.4.1"
coverage = "^7.2.7"
pytest-watch = "^4.2.0"
pytest = "^7.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
