[tool.poetry]
name = "Stack"
version = "0.1.0"
description = "Stack kata"
authors = ["Zeger Hendrikse <zegerh@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
cookiecutter = "2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
